# mood-tracker

./: .coverage  .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  analytics.py  docker-compose.yaml  models.py  pyproject.toml  requirements.md
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: code-quality.yaml  lint.yaml  pr-titles.yaml  security.yaml  test.yaml
backend/: Dockerfile  alembic.ini  locustfile.py  pyproject.toml
backend/alembic/versions/: 7ccb528afde7_create_mood_tracking_table.py
backend/app/: __main__.py
backend/app/db/: __init__.py
backend/app/db/connection/: __init__.py  session.py
backend/app/db/models/: __init__.py  track.py
backend/app/db/models/mixins/: index.py
backend/app/src/: app.py  docs.py  lifespan.py  settings.py
backend/app/src/common/: logging.py
backend/app/src/routers/: __init__.py  mood_tracker.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_app_smoke.py  test_db_smoke.py  test_lifespan.py  test_mood_tracker.py  test_moods_list_pagination_and_sort.py  test_moods_path_params.py  test_moods_validation_and_contract.py  test_routers.py  test_session_manager.py  test_session_manager_advanced.py
backend/tests/unit/: __main__.py  common.py  conftest.py  format_score.py  lifespan.py  low_mood_class.py  main.py  test_analytics.py  test_common_final.py  test_common_quick.py  test_coverage_boost.py  test_db_models.py  test_final_percent.py  test_final_push.py  test_frontend_models.py  test_home_mock.py  test_logging.py  test_model_table_name.py  test_models.py  test_session_db.py  test_settings.py  test_to_domain_entries.py  test_uuid_mixin.py
docs/: locust_perftest.html  openapi.json
frontend/: Dockerfile  Home.py  __init__.py  analytics.py  common.py  models.py
frontend/pages/: Analytics.py
scripts/: init-db.sh
