[project]
name = "mood-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
license = {text = "MIT"}
requires-python = "==3.14.*"

dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "uvicorn (>=0.43.0,<0.44.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "altair (>=6.0.0,<7.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",

    "mypy (>=1.0.0,<2.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-asyncio (>=0.23.0,<1.0.0)",
    "pytest-cov (>=5.0.0,<7.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "testcontainers[postgresql] (>=4.0.0,<5.0.0)"
]

[tool.poetry]
packages = [
    { include = "app", from = "backend" },
    { include = "frontend", from = "." }
]
