[project]
name = "mood-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
license = {text = "MIT"}
requires-python = "==3.14.*"

dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "uvicorn (>=0.43.0,<0.44.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "altair (>=6.0.0,<7.0.0)",
    "greenlet (>=3.4.0,<4.0.0)"
]

[tool.pytest.ini_options]
pythonpath = [".", "backend", "frontend"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",

    "mypy (>=1.0.0,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=5.0.0,<7.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "testcontainers[postgresql] (>=4.0.0,<5.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "radon (>=6.0.0,<7.0.0)",
    "bandit (>=1.7.0,<2.0.0)",
    "pip-audit (>=2.7.0,<3.0.0)",
    "interrogate (>=1.7.0,<2.0.0)",
    "types-requests (>=2.0.0,<3.0.0)",
    "locust (>=2.0.0,<3.0.0)"
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.14"
plugins = []
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

exclude = "(^backend/alembic/|^scripts/)"

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["backend/tests", "backend/alembic"]

[tool.interrogate]
fail-under = 100
verbose = 2

ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-nested-functions = true
ignore-private = true

exclude = [
    "backend/tests",
    "backend/alembic",
    "frontend"
]

[tool.poetry]
package-mode = false
